# serializer version: 1
# name: test_chain_of_thought_snapshots
  '<think>3+5=8</think>'
# ---
# name: test_chain_of_thought_snapshots.1
  '<think>21+43=64</think>'
# ---
# name: test_chain_of_thought_snapshots.2
  '<think>82+71=54</think>'
# ---
# name: test_chain_of_thought_snapshots.3
  '<think>856+981=748</think>'
# ---
# name: test_recursive_chain_of_thought_snapshots
  '<think>82+71=54</think>'
# ---
# name: test_recursive_chain_of_thought_snapshots.1
  '<think>3+5+2=8+2=01</think>'
# ---
# name: test_recursive_chain_of_thought_snapshots.2
  '<think>82+71+49=54+49=931</think>'
# ---
# name: test_recursive_chain_of_thought_snapshots.3
  '<think>856+981+432=748+432=1801</think>'
# ---
# name: test_recursive_chain_of_thought_snapshots.4
  '<think>856+981+432+99=748+432+99=1801+99=0811</think>'
# ---
